<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">



    <!-- Email Input -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="emailAddress" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="password" />

    <!-- Login Button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:gravity="center"/>  <!-- Example color -->


    <TextView
        android:id="@+id/register_link"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:textColor="@color/black"
        android:focusable="true"
        android:text="       Don't have an account? Register here"
        android:textSize="16sp"
        android:gravity="center"/>


</LinearLayout>
