<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <!-- Name Field -->
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="16sp"
        android:autofillHints="name"
        android:layout_marginBottom="8dp"/>

    <!-- Email Field -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="16sp"
        android:autofillHints="emailAddress"
        android:layout_marginBottom="8dp"/>

    <!-- Horizontal Layout for Verification Code and Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <!-- Send Verification Code Button -->
        <Button
            android:id="@+id/send_verification_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send"
            android:layout_marginEnd="8dp"

            android:background="@drawable/blue_background"/>

        <EditText
            android:id="@+id/verification_code"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Enter verification code"
            android:inputType="number"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <!-- Error Text for Verification Code -->
        <TextView
            android:id="@+id/code_error_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp"
            android:visibility="gone" />


    </LinearLayout>

    <!-- Password Field -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="16sp"
        android:autofillHints="password"
        android:layout_marginBottom="16dp"/>

    <!-- Register Button -->
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:enabled="false"
        android:layout_marginTop="16dp"

        android:background="@drawable/button_background" />

</LinearLayout>
